# HR-Agent-Backend

HR-Agent-Main/: .env.example  .gitignore  CLAUDE.md  HR_AGENT_SETUP.md  PROGRESS_SUMMARY.md  PROJECT_CHECKLIST.md  Procfile  RAILWAY_DEPLOY.md  README.md  SOURCES_DISPLAY_GUIDE.md  diagnose_province_issue.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh  test_actual_search.sql  test_director_content.sql  test_director_search.sql  test_embedding_format.py  test_function_exists.sql  test_search_simple.sql  test_surplus_interest.sql  vercel.json  verify_and_fix_search.sql  verify_document_insertion.sql  verify_function_signature.sql  verify_province_filtering.sql
HR-Agent-Main/app/: main.py
HR-Agent-Main/app/agents/: graph.py  mcp_integration.py  nodes.py  state.py  tools.py
HR-Agent-Main/app/core/: config.py  dependencies.py  error_handler.py  logging.py
HR-Agent-Main/app/db/: supabase.py  vector.py
HR-Agent-Main/app/models/: admin.py  agent_config.py  analytics.py  base.py  chat.py  customers.py  documents.py  normalized_message.py  pii.py  projects.py  prompts.py  query_analysis.py  search.py  slack.py  sources.py  tools.py  upload.py  user_settings.py  users.py  whatsapp.py
HR-Agent-Main/app/services/: admin.py  agent_config.py  airtable.py  analytics.py  chat.py  chat_attachments.py  chat_export_parser.py  customers.py  embedding.py  ingestion.py  mcp_client.py  normalization.py  pii.py  prompts.py  retention.py  search.py  telegram_export_parser.py  tool_management.py  user_api_keys.py  user_settings.py  users.py
HR-Agent-Main/app/utils/: chunking.py  docling.py  encryption.py  langfuse_client.py  llm_client.py  openai_client.py
HR-Agent-Main/docs/: AGENT_GRAPH_VISUALIZATION.md  AIRTABLE_ESCALATION_SETUP.md  API_ENDPOINTS_COMPLETE.md  API_SSO_AUTH.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CLEAN_PROMPT_STATE.md  CONFIDENCE_MIGRATION_COMPLETE.md  CONFIDENCE_SCORING.md  CONFIDENCE_SYSTEM_DESIGN.md  CONFIDENCE_SYSTEM_READY.md  CONFIDENCE_SYSTEM_UPDATES.md  CONVERSATION_MEMORY.md  FRONTEND_CONFIDENCE_IMPLEMENTATION.md  FRONTEND_HANDOFF.md  FRONTEND_PROMPT_TYPES_GUIDE.md  HOW_TO_TEST_PII.md  IMPLEMENTATION_SUMMARY.md  KB_CONTEXT_FLOW.md  PII_INTEGRATION.md  PROMPT_CONFIGURATION_IMPLEMENTATION.md  PROMPT_MANAGEMENT.md  PROMPT_STORAGE_ARCHITECTURE.md  PROMPT_USAGE.md  SECURITY_FIX_USER_ISOLATION.md  SESSIONS_LIST_IMPLEMENTATION.md  SLACK_INGESTION.md  SLACK_SETUP.md  TELEGRAM_ERROR_NOTIFICATIONS.md  TELEGRAM_INGESTION.md  TESTING_PII.md  TESTING_SLACK.md  TESTING_TELEGRAM.md
HR-Agent-Main/scripts/: check_database.py  debug_slack_auth.py  run_migration.py  seed_database.py  telegram_auth.py  test_agent.py  test_agent_config.py  test_chat_endpoint.py  test_conversation_memory.py  test_conversation_memory_simple.py  test_cost_tracking.py  test_database_prompts.py  test_document_upload.py  test_dynamic_cost.py  test_embedding_service.py  test_hybrid_search.py  test_langfuse_sessions.py  test_mcp_http_server.py  test_model_discovery.py  test_normalization.py  test_pii.py  test_pii_simple.py  test_prompt_management.py  test_query_analysis.py  test_query_analysis_quick.py  test_sessions_endpoint.py  test_sessions_service.py  test_slack_fetch.py  test_slack_ingestion.py  test_slack_webhook.py  test_streaming_persistence.py  test_tavily_mcp.py  test_telegram.py  test_telegram_notifier.py  test_telegram_realtime.py  test_vector_search.py  validate_pii.py  verify_vector_search.py
HR-Agent-Main/supabase/: README.md  debug_search_queries.sql
HR-Agent-Main/supabase/migrations/: 001_initial_schema.sql  002_optimize_vector_search.sql  003_system_prompts.sql  004_additional_prompts.sql  004_agent_configs.sql  005_add_llm_provider.sql  005_add_province_tagging.sql  006_add_tools_mcp_tables.sql  006_update_hr_prompts.sql  007_add_session_metadata.sql  008_create_customers_table.sql  009_create_customer_api_keys_table.sql  010_create_widget_configs_table.sql  011_add_analytics_indexes.sql  012_create_user_audit_logs_table.sql  013_add_confidence_config.sql  014_fix_confidence_prompt.sql  015_fix_main_system_prompt.sql  016_reset_clean_prompts.sql  017_fix_chat_messages_fk_constraint.sql  (+19 more)
HR-Agent-Main/tests/: simple_http_mcp_server.py  test_mcp_integration.py
(+19 files in other folders)
